Hide dietary restritions info

--- a/app/client/views/admin/user/user.html
+++ b/app/client/views/admin/user/user.html
@@ -306,7 +306,7 @@
         <input type="tel" ng-model="selectedUser.confirmation.phoneNumber" />
       </div>
 
-      <div class="field">
+      <!-- <div class="field">
         <label> Dietary Restrictions </label>
         <input
           type="text" ng-model="selectedUser.confirmation.dietaryRestrictions" />
@@ -316,7 +316,7 @@
           <label> Other Dietary Restrictions </label>
           <input
             type="text" ng-model="selectedUser.confirmation.otherDietaryRestrictions" />
-        </div>
+        </div> -->
 
       <div class="field">
         <label> Shirt Size </label>
