--- a/app/client/views/application/application.html
+++ b/app/client/views/application/application.html
@@ -149,6 +149,16 @@
                    placeholder="Your Resume"
                    ng-model="user.profile.resume">    
         </div>
+
+        <!-- <div class="field">
+            <label>
+              Are there any special accommodations you would need from us?
+              *Note: This question does not get factored into how your application is read! 
+            </label>
+            <input type="text"
+                   placeholder="Special Accomodations"
+                   ng-model="user.profile.specialAccomodations">
+        </div> -->
   
         <br>
 
@@ -324,14 +334,13 @@
                    ng-model="user.profile.activities">
         </div>
 
-        <br>
-
-        <div class="field">
-            <label>Any food restrictions or allergies?</label>
-            <input type="text"
-                   placeholder="Dietary Restrictions"
-                   ng-model="user.profile.dietaryRestrictions">
-        </div>
+        <!-- Temporarily removing since 2021 will be virtual -->
+        <!-- <div class="field">
+          <label>Any food restrictions or allergies?</label>
+          <input type="text"
+                 placeholder="Dietary Restrictions"
+                 ng-model="user.profile.dietaryRestrictions">
+        </div> -->
 
         <br>
 
