--- a/app/client/views/admin/stats/stats.html
+++ b/app/client/views/admin/stats/stats.html
@@ -107,7 +107,8 @@
           </div>
         </div>
 
-        <div class="ui divider"></div>
+        <!-- Temporarily hiding since 2021 is virtual-->
+        <!-- <div class="ui divider"></div>
 
         <div class="item">
           <i class="food icon"></i>
@@ -120,7 +121,7 @@
               {{restriction.name}} ({{restriction.count}})
             </span>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </div>
