--- a/app/client/views/confirmation/confirmation.html
+++ b/app/client/views/confirmation/confirmation.html
@@ -36,7 +36,7 @@
 
           </div>
 
-          <div class="inline fields">
+          <!-- <div class="inline fields">
             <div class="field"
               ng-repeat="(key, value) in dietaryRestrictions">
 
@@ -52,7 +52,7 @@
           <div class="field" ng-show="dietaryRestrictions['Other']">
             <label> Other Dietary Restrictions (please specify) </label>
             <input type="text" ng-model="user.confirmation.otherDietaryRestrictions">
-          </div>
+          </div> -->
 
 
           <br>
