--- a/app/client/views/application/application.html
+++ b/app/client/views/application/application.html
@@ -150,7 +150,7 @@
                    ng-model="user.profile.resume">    
         </div>
 
-        <!-- <div class="field">
+        <div class="field">
             <label>
               Are there any special accommodations you would need from us?
               *Note: This question does not get factored into how your application is read! 
@@ -158,7 +158,7 @@
             <input type="text"
                    placeholder="Special Accomodations"
                    ng-model="user.profile.specialAccomodations">
-        </div> -->
+        </div>
   
         <br>
 
