Remove activities question

--- a/app/client/views/application/application.html
+++ b/app/client/views/application/application.html
@@ -152,7 +152,7 @@
 
         <div class="field">
             <label>
-              Are there any special accommodations you would need from us?
+              Are there any special accommodations you would need from us? <br>
               *Note: This question does not get factored into how your application is read! 
             </label>
             <input type="text"
@@ -323,15 +323,6 @@
             <label>{{key}}</label>
           </div>
 
-        </div>
-
-        <br>
-
-        <div class="field">
-            <label>What kind of activities, talks, or workshops would you like to attend at HackBeanpot? (Ex. Yoga, professional development talk, React workshop, etc.) <span class="required">*</span></label>
-            <input type="text"
-                   placeholder="Activities"
-                   ng-model="user.profile.activities">
         </div>
 
         <!-- Temporarily removing since 2021 will be virtual -->
