Add activity interests question

--- a/app/client/views/admin/user/user.html
+++ b/app/client/views/admin/user/user.html
@@ -258,21 +258,6 @@
         </select>
       </div>
 
-
-      <!-- Older Questions -->
-
-      <div class="field">
-        <label> Tech Interests </label>
-        <input
-          type="text" ng-model="selectedUser.profile.techInterests" />
-      </div>
-
-      <div class="field">
-        <label> Other Tech Interests </label>
-        <input
-          type="text" ng-model="selectedUser.profile.otherTechInterests" />
-      </div>
-
       <div class="field">
         <label> Heard About Us </label>
         <input
@@ -283,6 +268,18 @@
         <label> Other Heard About us </label>
         <input
           type="text" ng-model="selectedUser.profile.otherHeardAboutUs" />
+      </div>
+
+      <div class="field">
+        <label> Workshop or Activity Interests </label>
+        <input
+          type="text" ng-model="selectedUser.profile.activityInterests" />
+      </div>
+
+      <div class="field">
+        <label> Other Workshops or Activities </label>
+        <input
+          type="text" ng-model="selectedUser.profile.otheractivityInterests" />
       </div>
 
       <div class="field">
