--- a/app/client/views/admin/stats/stats.html
+++ b/app/client/views/admin/stats/stats.html
@@ -133,7 +133,7 @@
     <div class="ui header">
       Demographics
     </div>
-    <div class="ui list">
+    <!-- <div class="ui list">
       <div class="item">
         <i class="users icon"></i>
         <div class="content">
@@ -164,7 +164,7 @@
           <strong>Did not respond</strong>: {{stats.demo.gender['N']}} ({{stats.demo.gender['N'] / stats.total * 100 | number:1 }}%)
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="ui divider"></div>
       <div class="ui list">
         <div class="item">
