--- a/app/client/views/application/application.html
+++ b/app/client/views/application/application.html
@@ -77,7 +77,7 @@
           <label>What level of education are you currently pursuing? <span class="required">*</span></label>
           <select
             name="educationLevel"
-            ng-model="selectedUser.profile.educationLevel">
+            ng-model="user.profile.educationLevel">
             <option value="H">High School</option>
             <option value="U">Undergraduate</option>
             <option value="G">Graduate</option>
@@ -180,7 +180,7 @@
           <label>How many hackathons have you attended? <span class="required">*</span></label>
           <select
             name="hackathonsAttended"
-            ng-model="selectedUser.profile.hackathonsAttended">
+            ng-model="user.profile.hackathonsAttended">
             <option value="0">0</option>
             <option value="1">1-2</option>
             <option value="3">3-5</option>
