Debug user page

--- a/app/client/views/admin/user/user.html
+++ b/app/client/views/admin/user/user.html
@@ -239,7 +239,7 @@
         </label>
         <select
           name="hasTeam"
-          ng-model="user.profile.hasTeam">
+          ng-model="selectedUser.profile.hasTeam">
           <option value="yes">Yes</option>
           <option value="no">No</option>
         </select>
@@ -252,7 +252,7 @@
         </label>
         <select
           name="teamFormationPlan"
-          ng-model="user.profile.teamFormationPlan">
+          ng-model="selectedUser.profile.teamFormationPlan">
           <option value="yes">Yes</option>
           <option value="no">No</option>
         </select>
